===========================
Isotope eCommerce Changelog
===========================

Version 0.2.4 (2011-01-??)
------------------------------
- Updated ContentIsotope methods to match ModuleIsotope methods (Ticket #290)
- Fixed weight total shipping included rates from all shipping modules
- Fixed mandatory asterisks not appearing in checkout address fields
- Fixed email issues with mail clients not supporting <tfood>
- Fixed missing comma in mail text (Ticket #217)
- Fixed HTML issue in iso_reader_default.tpl (Ticket #203)
- Fixed: Custom templates were not always shown in "override all" mode (see Contao Core Ticket #2725)
- Fixed shipping and payment method always displaying error message (Ticket #175)
- Fixed toggle button not appearing for non-admins (Ticket #253)
- Fixed global operation labels in IE7 (Ticket #253)
- Fixed order delete button appearing for non-admins (Ticket #192)
- Fixed issues with runonce.php database file update on certain systems
- Improved italian address formatting (Ticket #305)
- Improved UK address formatting (Ticket #301)

Version 0.2.3 (2010-12-20)
------------------------------
- Added hooks for altering taxes
- Added guest and member group restrictions on payment modules
- Added product type restrictions on shipping modules
- Added "check all" in product quick edit (Ticket #294)
- Fixed countries bug in checkout
- Fixed language files still containing search label
- Fixed address field translation in mails
- Fixed allowed number of downloads, was not multiplicated by the number of purchases
- Fixed download availability check bugs
- Fixed problem with unavailable product type in rules
- Fixed jumpTo in related product list
- Fixed division by zero error message in product list
- Fixed mail templates, parseSimpleTokens stripped important HTML tags
- Fixed SQL error when adding new category to a product (Ticket #299)
- Fixed bug in rule calculation for each product quantity
- Fixed order history not showing discount price