@@ -596,8 +596,6 @@ class Isotope extends Controller
 		{
 			$objEmail->replyTo((strlen($arrData['customer_name']) ? sprintf('%s <%s>', $arrData['customer_name'], $arrData['customer_email']) : $arrData['customer_email']));
 		}
-		
-		$css = '';
 
 		// Add style sheet newsletter.css
 		if (!$objNewsletter->sendText && file_exists(TL_ROOT . '/newsletter.css'))
@@ -608,6 +606,7 @@ class Isotope extends Controller
 			$css  = '<style type="text/css">' . "\n";
 			$css .= trim($buffer) . "\n";
 			$css .= '</style>' . "\n";
+			$arrData['newsletter.css'] = $css;
 		}
 		
 		// Add HTML content
@@ -618,7 +617,7 @@ class Isotope extends Controller
 
 			$objTemplate->body = $objMail->html;
 			$objTemplate->charset = $GLOBALS['TL_CONFIG']['characterSet'];
-			$objTemplate->css = $css;
+			$objTemplate->css = '##newsletter.css##';
 			
 			// Prevent parseSimpleTokens from stripping important HTML tags
 			$GLOBALS['TL_CONFIG']['allowedTags'] .= '<doctype><html><head><meta><style><body>';
